fix for broken lines for better readability

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -49,7 +49,6 @@ main {
 
     p>a {
       color: $main-colour;
-      word-break: break-all;
 
       &:hover {
         border-bottom: 1px solid $main-colour;
@@ -171,7 +170,6 @@ main {
     a {
       margin-right: 5px;
       color: $main-colour;
-      word-break: break-all;
     }
   }
 
@@ -300,7 +298,6 @@ main {
 .about {
   p>a {
     color: $main-colour;
-    word-break: break-all;
 
     &:hover {
       border-bottom: 1px solid $main-colour;
